--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,52 +1,169 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
 analyzer:
-  plugins:
-    - dart_code_metrics
   exclude:
     - "build/**"
     - "script/**"
     - "**/*.g.dart"
-
-linter:
-  rules:
-    avoid_print: true # Uncomment to disable the `avoid_print` rule
-    prefer_single_quotes: true # Uncomment to enable the `prefer_single_quotes` rule
-    noop_primitive_operations: true
+    - "**/*.freezed.dart"
+  language:
+    strict-inference: true
+  plugins:
+    - dart_code_metrics
+  strong-mode:
+    implicit-casts: false
+  errors:
+    avoid_dynamic_calls: error
+    avoid_empty_else: error
+    avoid_print: error
+    avoid_relative_lib_imports: error
+    avoid_returning_null_for_future: error
+    avoid_slow_async_io: error
+    avoid_type_to_string: error
+    avoid_types_as_parameter_names: error
+    avoid_web_libraries_in_flutter: error
+    cancel_subscriptions: error
+    close_sinks: error
+    control_flow_in_finally: error
+    depend_on_referenced_packages: error
+    empty_statements: error
+    hash_and_equals: error
+    invariant_booleans: error
+    iterable_contains_unrelated_type: error
+    list_remove_unrelated_type: error
+    literal_only_boolean_expressions: error
+    no_adjacent_strings_in_list: error
+    no_duplicate_case_values: error
+    no_logic_in_create_state: error
+    prefer_void_to_null: error
+    test_types_in_equals: error
+    throw_in_finally: error
+    unnecessary_statements: error
+    unrelated_type_equality_checks: error
+    unsafe_html: error
+    use_build_context_synchronously: error
+    use_key_in_widget_constructors: error
+    valid_regexps: error
 
 dart_code_metrics:
-  metrics:
-    cyclomatic-complexity: 20
-    number-of-arguments: 4
-    maximum-nesting-level: 5
-  metrics-exclude:
-    - test/**
-  rules:
-    - newline-before-return
-    - no-boolean-literal-compare
-    - no-empty-block
-    - prefer-trailing-comma
-    - prefer-conditional-expressions
-    - no-equal-then-else
-    - always-remove-listener
-    - avoid-unused-parameters
-    - avoid-unnecessary-setstate
-    - avoid-wrapping-in-padding
-    - double-literal-format
-    - prefer-const-border-radius
-    - prefer_extracting_callbacks
-    - member-ordering-extended
-    - prefer-extracting-callbacks
-    - no-object-declaration
   anti-patterns:
     - long-method
     - long-parameter-list
+  metrics:
+    cyclomatic-complexity: 20
+    maintainability-index: 50
+    maximum-nesting: 5
+    number-of-parameters: 5
+    source-lines-of-code: 50
+    technical-debt:
+      threshold: 1
+      todo-cost: 4
+      ignore-cost: 8
+      ignore-for-file-cost: 16
+      as-dynamic-cost: 16
+      deprecated-annotations-cost: 2
+      file-nullsafety-migration-cost: 2
+      unit-type: "hours"
+  metrics-exclude:
+    - test/**
+  rules:
+    - always-remove-listener
+    - avoid-missing-enum-constant-in-map
+    - avoid-nested-conditional-expressions:
+        acceptable-level: 2
+    - avoid-returning-widgets
+    - avoid-throw-in-catch-block
+    - avoid-unnecessary-setstate
+    - avoid-unnecessary-type-assertions
+    - avoid-unnecessary-type-casts
+    - binary-expression-operand-order
+    - double-literal-format
+    - newline-before-return
+    - no-boolean-literal-compare
+    - no-empty-block
+    - no-equal-then-else
+    - prefer-conditional-expressions
+    - prefer-const-border-radius
+    - prefer-correct-type-name
+    - prefer-extracting-callbacks
+    - prefer-first
+    - prefer-intl-name
+    - prefer-last
+    - prefer-single-widget-per-file
+    - provide-correct-intl-args
+
+linter:
+  rules:
+    # Error rules.
+    always_use_package_imports: false
+    avoid_dynamic_calls: true
+    avoid_returning_null_for_future: true
+    avoid_slow_async_io: true
+    avoid_type_to_string: true
+    cancel_subscriptions: true
+    close_sinks: true
+    invariant_booleans: true
+    literal_only_boolean_expressions: true
+    no_adjacent_strings_in_list: true
+    test_types_in_equals: true
+    throw_in_finally: true
+    unnecessary_statements: true
+    unrelated_type_equality_checks: true
+    unsafe_html: true
+    use_build_context_synchronously: true
+
+    # Style rules.
+    always_declare_return_types: true
+    always_put_required_named_parameters_first: false
+    avoid_bool_literals_in_conditional_expressions: true
+    avoid_catches_without_on_clauses: true
+    avoid_catching_errors: true
+    avoid_equals_and_hash_code_on_mutable_classes: true
+    avoid_escaping_inner_quotes: true
+    avoid_field_initializers_in_const_classes: true
+    avoid_implementing_value_types: true
+    avoid_js_rounded_ints: true
+    avoid_multiple_declarations_per_line: true
+    avoid_private_typedef_functions: true
+    avoid_returning_null: true
+    avoid_returning_this: true
+    avoid_setters_without_getters: true
+    deprecated_consistency: true
+    do_not_use_environment: true
+    leading_newlines_in_multiline_strings: true
+    lines_longer_than_80_chars: false
+    missing_whitespace_between_adjacent_strings: true
+    no_runtimeType_toString: true
+    noop_primitive_operations: true
+    null_closures: true
+    only_throw_errors: true
+    package_api_docs: true
+    parameter_assignments: true
+    prefer_asserts_in_initializer_lists: true
+    prefer_constructors_over_static_methods: true
+    prefer_final_in_for_each: true
+    prefer_final_locals: true
+    prefer_interpolation_to_compose_strings: true
+    prefer_mixin: false
+    prefer_single_quotes: true
+    public_member_api_docs: false
+    sort_child_properties_last: false
+    sort_constructors_first: false
+    sort_unnamed_constructors_first: false
+    type_annotate_public_apis: true
+    unawaited_futures: true
+    unnecessary_await_in_return: true
+    unnecessary_constructor_name: true
+    unnecessary_null_aware_assignments: true
+    unnecessary_nullable_for_final_variable_declarations: true
+    unnecessary_parenthesis: true
+    unnecessary_raw_strings: true
+    use_if_null_to_convert_nulls_to_bools: true
+    use_is_even_rather_than_modulo: true
+    use_late_for_private_fields_and_variables: true
+    use_named_constants: true
+    use_raw_strings: true
+    use_setters_to_change_properties: true
+    use_string_buffers: true
+    use_test_throws_matchers: true
+    use_to_and_as_if_applicable: true
