chore: tune build app workflow

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -167,3 +167,6 @@ linter:
     use_string_buffers: true
     use_test_throws_matchers: true
     use_to_and_as_if_applicable: true
+
+    # Pub rules.
+    sort_pub_dependencies: true
