--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "routemaster",
         "rxdart",
         "setstate",
+        "subosito",
         "tizen",
         "todos",
         "toshimaru",
