--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -129,13 +129,16 @@ linter:
     avoid_returning_this: true
     avoid_setters_without_getters: true
     deprecated_consistency: true
+    directives_ordering: true
     do_not_use_environment: true
+    eol_at_end_of_file: true
     leading_newlines_in_multiline_strings: true
     lines_longer_than_80_chars: false
     missing_whitespace_between_adjacent_strings: true
     no_runtimeType_toString: true
     noop_primitive_operations: true
     null_closures: true
+    omit_local_variable_types: true
     only_throw_errors: true
     package_api_docs: true
     parameter_assignments: true
@@ -143,10 +146,12 @@ linter:
     prefer_constructors_over_static_methods: true
     prefer_final_in_for_each: true
     prefer_final_locals: true
+    prefer_if_elements_to_conditional_expressions: true
     prefer_interpolation_to_compose_strings: true
     prefer_mixin: false
     prefer_single_quotes: true
     public_member_api_docs: false
+    require_trailing_commas: true
     sort_child_properties_last: false
     sort_constructors_first: false
     sort_unnamed_constructors_first: false
@@ -154,7 +159,9 @@ linter:
     unawaited_futures: true
     unnecessary_await_in_return: true
     unnecessary_constructor_name: true
+    unnecessary_lambdas: true
     unnecessary_null_aware_assignments: true
+    unnecessary_null_checks: true
     unnecessary_nullable_for_final_variable_declarations: true
     unnecessary_parenthesis: true
     unnecessary_raw_strings: true
