--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,10 @@
         "codegen",
         "cyclomatic",
         "dkrutskikh",
+        "dorny",
         "goldens",
         "ints",
+        "lcov",
         "mobx",
         "mocktail",
         "nullsafety",
