--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
 
   flutter_mobx: ^2.0.0
+  golden_toolkit: ^0.13.0
   mobx: ^2.0.0
   provider: ^6.0.0
   routemaster: ^0.9.0
@@ -52,16 +53,7 @@ flutter:
     - family: Montserrat
       fonts:
         - asset: assets/fonts/montserrat-v21-latin_cyrillic-regular.ttf
-    - family: Montserrat500
-      fonts:
         - asset: assets/fonts/montserrat-v21-latin_cyrillic-500.ttf
-          weight: 500
-    - family: Montserrat600
-      fonts:
         - asset: assets/fonts/montserrat-v21-latin_cyrillic-600.ttf
-          weight: 600
-    - family: Montserrat700
-      fonts:
         - asset: assets/fonts/montserrat-v21-latin_cyrillic-700.ttf
-          weight: 700
           
