feat: init typography (#11)
* feat: init typography

* fix: changelog

* fix: add newline at end in pubspec.yaml

* fix: add unrealesed changelog

* fix: typography

* feat: add typography test

* fix: move golden tests package to dev dependencies

* fix: pubspec.yaml

* fix: app_typography

* fix: common_snackbar

* fix: typography

* fix: test_widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  golden_toolkit: ^0.13.0
   mobx_codegen: ^2.0.0
 
 flutter:
@@ -47,3 +48,15 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+  
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/montserrat-v21-latin_cyrillic-regular.ttf
+          weight: 400
+        - asset: assets/fonts/montserrat-v21-latin_cyrillic-500.ttf
+          weight: 500
+        - asset: assets/fonts/montserrat-v21-latin_cyrillic-600.ttf
+          weight: 600
+        - asset: assets/fonts/montserrat-v21-latin_cyrillic-700.ttf
+          weight: 700
