build: bump version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Куда пойти сегодня?
 # Prevent accidental publishing to pub.dev.
 publish_to: "none"
 
-version: 0.0.0+2
+version: 0.1.0
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
@@ -48,7 +48,7 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
-  
+
   fonts:
     - family: Montserrat
       fonts:
