--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
 
   flutter_mobx: ^2.0.0
+  mask_text_input_formatter: ^2.1.0
   mobx: ^2.0.0
   provider: ^6.0.0
   routemaster: ^0.9.0
@@ -48,6 +49,7 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+    - assets/images/3.0x/
 
   fonts:
     - family: Montserrat
