--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
 
   flutter_mobx: ^2.0.0
+  flutter_svg: ^1.0.3
   mask_text_input_formatter: ^2.1.0
   mobx: ^2.0.0
   provider: ^6.0.0
@@ -50,6 +51,7 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
     - assets/images/3.0x/
+    - assets/images/auth/sign_in/
 
   fonts:
     - family: Montserrat
