--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_svg: ^1.0.3
+
   flutter_localizations:
     sdk: flutter
 
@@ -31,10 +33,11 @@ dev_dependencies:
   bloc_test: ^9.0.0
   build_runner: ^2.1.2
   dart_code_metrics: ^4.9.1
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.0  
 
   flutter_test:
     sdk: flutter
+
 
   golden_toolkit: ^0.13.0
   mobx_codegen: ^2.0.0
