--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   dio: ^4.0.0
   equatable: ^2.0.0
 
+  firebase_auth: ^3.3.6
+  firebase_core: ^1.12.0
   flutter:
     sdk: flutter
 
