--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
 
   flutter_mobx: ^2.0.0
   hive_flutter: ^1.1.0
+  intl: ^0.17.0
   mask_text_input_formatter: ^2.1.0
   mobx: ^2.0.0
   provider: ^6.0.0
