--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
 
   flutter_mobx: ^2.0.0
   hive_flutter: ^1.1.0
+  flutter_svg: ^1.0.3
+  mask_text_input_formatter: ^2.1.0
   mobx: ^2.0.0
   provider: ^6.0.0
   routemaster: ^0.9.0
@@ -49,6 +51,8 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+    - assets/images/3.0x/
+    - assets/images/auth/sign_in/
 
   fonts:
     - family: Montserrat
