--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
 
   flutter_mobx: ^2.0.0
+  freezed_annotation: ^1.1.0
   hive_flutter: ^1.1.0
   flutter_svg: ^1.0.3
   mask_text_input_formatter: ^2.1.0
@@ -39,6 +40,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  freezed: ^1.1.0
   golden_toolkit: ^0.13.0
   mobx_codegen: ^2.0.0
 
