--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,12 @@ dependencies:
   equatable: ^2.0.0
 
   firebase_auth: ^3.3.6
+  firebase_auth_web: ^3.3.7
   firebase_core: ^1.12.0
+  firebase_core_web: ^1.5.4
   flutter:
+    sdk: flutter
+  flutter_web_plugins:
     sdk: flutter
 
   flutter_localizations:
