--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,13 @@ dependencies:
 
   flutter_mobx: ^2.0.0
   hive_flutter: ^1.1.0
+  http_mock_adapter: ^0.3.2
+  json_annotation: ^4.4.0
+  json_serializable: ^6.1.4
   mobx: ^2.0.0
+  mockito: ^5.0.17
   provider: ^6.0.0
+  retrofit: ^3.0.1
   routemaster: ^0.9.0
   rxdart: ^0.27.0
 
@@ -39,6 +44,7 @@ dev_dependencies:
 
   golden_toolkit: ^0.13.0
   mobx_codegen: ^2.0.0
+  retrofit_generator: '>=3.0.0 <4.0.0'
 
 flutter:
   uses-material-design: true
