--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -105,6 +105,8 @@ dart_code_metrics:
     - prefer-single-widget-per-file
     - provide-correct-intl-args
     - member-ordering-extended:
+        exclude:
+          - lib/src/core/services/network/firebase_options.dart
         order:
           - public-static-const-fields
           - private-static-const-fields
