--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
 
   flutter_mobx: ^2.0.0
   flutter_svg: ^1.0.3
+  freezed_annotation: ^1.1.0
   hive_flutter: ^1.1.0
   intl: ^0.17.0
   mask_text_input_formatter: ^2.1.0
@@ -40,6 +41,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  freezed: ^1.1.0
   golden_toolkit: ^0.13.0
   mobx_codegen: ^2.0.0
 
