--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   freezed: ^1.1.0
   golden_toolkit: ^0.13.0
   mobx_codegen: ^2.0.0
+  mocktail: ^0.2.0
 
 flutter:
   uses-material-design: true
