feat: phone service (#36)
* feat: firebase init

* feat: phone auth implementation

* fix: changelog update

* fix: dependencies update

* fix: formatting

* fix: active user session check added

* fix: analyzer comments resolve

* fix: force resending token support

* fix: exclude codegen class from analyzer check

* fix: phone auth init update

* fix: gradle update

* fix: missing symbol

* fix: phone auth service tests

* fix: sort pub dependencies

* fix: ignore no-empty-block, avoid-unused-parameters in test

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -100,10 +100,13 @@ dart_code_metrics:
     - prefer-last
     - prefer-match-file-name:
         exclude:
+          - lib/src/core/services/network/firebase_options.dart
           - test/**
     - prefer-single-widget-per-file
     - provide-correct-intl-args
     - member-ordering-extended:
+        exclude:
+          - lib/src/core/services/network/firebase_options.dart
         order:
           - public-static-const-fields
           - private-static-const-fields
