--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,12 @@ dependencies:
   freezed_annotation: ^1.1.0
   hive_flutter: ^1.1.0
   intl: ^0.17.0
+  json_annotation: ^4.4.0
+  json_serializable: ^6.1.4
   mask_text_input_formatter: ^2.1.0
   mobx: ^2.0.0
   provider: ^6.0.0
+  retrofit: ^3.0.1
   routemaster: ^0.9.0
   rxdart: ^0.27.0
 
@@ -46,6 +49,7 @@ dev_dependencies:
   golden_toolkit: ^0.13.0
   mobx_codegen: ^2.0.0
   mocktail: ^0.2.0
+  retrofit_generator: '>=3.0.0 <4.0.0'
 
 flutter:
   uses-material-design: true
