--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_login_vk: ^2.2.0
   flutter_mobx: ^2.0.0
   flutter_svg: ^1.0.3
   flutter_web_plugins:
