--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_mobx: ^2.0.0
   flutter_svg: ^1.0.3
   freezed_annotation: ^1.1.0
+  google_sign_in: ^5.2.3
   hive_flutter: ^1.1.0
   intl: ^0.17.0
   json_annotation: ^4.4.0
