--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   bloc_test: ^9.0.0
   build_runner: ^2.1.2
   dart_code_metrics: ^4.9.1
+  flutter_facebook_auth: ^4.0.1
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
@@ -49,7 +50,7 @@ dev_dependencies:
   golden_toolkit: ^0.13.0
   mobx_codegen: ^2.0.0
   mocktail: ^0.2.0
-  retrofit_generator: '>=3.0.0 <4.0.0'
+  retrofit_generator: ">=3.0.0 <4.0.0"
 
 flutter:
   uses-material-design: true
