--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="ru.boostgrade.wtgt">
+  <uses-permission android:name="android.permission.INTERNET"/>
   <application android:label="where_to_go_today" android:icon="@mipmap/ic_launcher">
-    <uses-permission android:name="android.permission.INTERNET"/>
     <activity android:name=".MainActivity" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
       <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
@@ -22,10 +22,8 @@
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
     <meta-data android:name="flutterEmbedding" android:value="2" />
 
-    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/321585666565525"/>
-    <meta-data android:name="com.facebook.sdk.ClientToken" android:value="@string/c1ddc3aaa8607457d313fcb27f253a6d"/>
-
-    <activity android:name="com.facebook.FacebookActivity" android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" />
+    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+    <activity android:name="com.facebook.FacebookActivity" android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" />
     <activity android:name="com.facebook.CustomTabActivity" android:exported="true">
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
