feat: google sign in (#49)
* feat: auth repository
feat: auth api retrofit
feat: auth models
feat: test loginWithVk(!)

* fix: reposotory tests
fix: pub removed mockito and http_mock_adapter
feat: changelog
fix: flutter format

* fix: trailing comma in repository_test
fix: move to changelog 0.3.0

* fix: sort pub dependecies

* feat: Future<void> methods in test

* fix: flutter format

* fix: auth_repository_test directory

* fix: flutter format

* fix: syntax redundant in auth_repositrory_test

* fix: const constructors in model
fix: createFactory value in request models
fix: createToJson value in response models

* feat: google sign in

* fix: misspelles in comments
fix: googleAuth usage in bloc
fix: googleAuth remove in SignInScreenVm
fix: authBloc test

* fix: google_sign_in_web pr error

* fix: app dependecies after merge

* fix: excessive async await
fix: old error handling on exception in authBloc
fix: mock paramenter in auth_bloc_test

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   freezed_annotation: ^1.1.0
+  google_sign_in: ^5.2.3
+  google_sign_in_web: ^0.10.0+4
   hive_flutter: ^1.1.0
   intl: ^0.17.0
   json_annotation: ^4.4.0
