--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   json_annotation: ^4.4.0
   json_serializable: ^6.1.4
   mask_text_input_formatter: ^2.1.0
+  mockito: ^5.1.0
   mobx: ^2.0.0
   provider: ^6.0.0
   retrofit: ^3.0.1
@@ -49,7 +50,7 @@ dev_dependencies:
   golden_toolkit: ^0.13.0
   mobx_codegen: ^2.0.0
   mocktail: ^0.2.0
-  retrofit_generator: '>=3.0.0 <4.0.0'
+  retrofit_generator: ">=3.0.0 <4.0.0"
 
 flutter:
   uses-material-design: true
