--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   rxdart: ^0.27.0
 
 dev_dependencies:
+  async: ^2.8.2
   bloc_test: ^9.0.0
   build_runner: ^2.1.2
   dart_code_metrics: ^4.9.1
