feat: vk login (#46)
* feat: VK plugin setup

* feat: VK login implementation

* fix: changelog update

* fix: use bloc for auth

* fix: main screen route

* fix: test and imports

* fix: vm update

* fix: vk auth init update

* fix: bloc update

* fix: constructor reduce

* fix: auth bloc test

* fix: code screen test

* fix: vk auth tests added

* fix: dependency validator error

* Revert "fix: dependency validator error"

This reverts commit 8d5a12e6

* fix: dependency validator error

Co-authored-by: Andrey Rankov <andreyr@appcard.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_login_vk: ^2.2.0
   flutter_mobx: ^2.0.0
   flutter_svg: ^1.0.3
   flutter_web_plugins:
@@ -41,6 +42,7 @@ dependencies:
   rxdart: ^0.27.0
 
 dev_dependencies:
+  async: ^2.8.2
   bloc_test: ^9.0.0
   build_runner: ^2.1.2
   dart_code_metrics: ^4.9.1
