fix: facebook-logic

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,39 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
-		<key>CFBundleURLTypes</key>
-		<array>
-			<dict>
-				<key>CFBundleURLSchemes</key>
-				<array>
-					<string>fb321585666565525</string>
-				</array>
-			</dict>
-		</array>
-		<key>FacebookAppID</key>
-		<string>321585666565525</string>
-		<key>FacebookClientToken</key>
-		<string>c1ddc3aaa8607457d313fcb27f253a6d</string>
-		<key>FacebookDisplayName</key>
-		<string>wtgt_auth</string>
-		<key>LSApplicationQueriesSchemes</key>
-		<array>
-			<string>fbapi</string>
-			<string>fbapi20130214</string>
-			<string>fbapi20130410</string>
-			<string>fbapi20130702</string>
-			<string>fbapi20131010</string>
-			<string>fbapi20131219</string>
-			<string>fbapi20140410</string>
-			<string>fbapi20140116</string>
-			<string>fbapi20150313</string>
-			<string>fbapi20150629</string>
-			<string>fbapi20160328</string>
-			<string>fbauth</string>
-			<string>fb-messenger-share-api</string>
-			<string>fbauth2</string>
-			<string>fbshareextension</string>
-		</array>
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleExecutable</key>
@@ -53,6 +20,25 @@
 		<string>????</string>
 		<key>CFBundleVersion</key>
 		<string>$(FLUTTER_BUILD_NUMBER)</string>
+		<key>VKAppId</key>
+		<string>8079047</string>
+		<key>FacebookAppID</key>
+		<string>321585666565525</string>
+		<key>FacebookClientToken</key>
+		<string>c1ddc3aaa8607457d313fcb27f253a6d</string>
+		<key>FacebookDisplayName</key>
+		<string>wtgt_auth</string>
+		<key>LSApplicationQueriesSchemes</key>
+		<array>
+			<string>vk</string>
+			<string>vk-share</string>
+			<string>vkauthorize</string>
+			<string>fbapi</string>
+			<string>fb-messenger-share-api</string>
+			<string>fbauth2</string>
+			<string>fbshareextension</string>
+		</array>
+		<!-- Google Sign-in Section -->
 		<key>CFBundleURLTypes</key>
 		<array>
 			<dict>
@@ -60,10 +46,13 @@
 				<string>Editor</string>
 				<key>CFBundleURLSchemes</key>
 				<array>
+					<string>fb321585666565525</string>
+					<string>vk8079047</string>
 					<string>com.googleusercontent.apps.394701056108-kt6uq7rui85kbh6c43f5ikoviobcr10d</string>
 				</array>
 			</dict>
 		</array>
+		<!-- End of the Google Sign-in Section -->
 		<key>LSRequiresIPhoneOS</key>
 		<true/>
 		<key>UILaunchStoryboardName</key>
@@ -84,23 +73,6 @@
 			<string>UIInterfaceOrientationLandscapeRight</string>
 		</array>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
-		<key>CFBundleURLTypes</key>
-		<array>
-			<dict>
-				<key>CFBundleURLSchemes</key>
-				<array>
-					<string>vk8079047</string>
-				</array>
-			</dict>
-		</array>
-		<key>LSApplicationQueriesSchemes</key>
-		<array>
-			<string>vk</string>
-			<string>vk-share</string>
-			<string>vkauthorize</string>
-		</array>
-		<key>VKAppId</key>
-		<string>8079047</string>
 		<false/>
 	</dict>
 </plist>
