--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,13 @@
     {
       "type": "flutter",
       "command": "flutter",
-      "args": ["pub", "run", "build_runner", "build"],
+      "args": [
+        "pub",
+        "run",
+        "build_runner",
+        "build",
+        "--delete-conflicting-outputs"
+      ],
       "problemMatcher": ["$dart-build_runner"],
       "group": "build",
       "label": "flutter: flutter pub run build_runner build --delete-conflicting-outputs",
