--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   retrofit: ^3.0.1
   routemaster: ^0.9.0
   rxdart: ^0.27.0
+  smooth_page_indicator: ^1.0.0+2
 
 dev_dependencies:
   async: ^2.8.2
@@ -53,7 +54,7 @@ dev_dependencies:
   golden_toolkit: ^0.13.0
   mobx_codegen: ^2.0.0
   mocktail: ^0.2.0
-  retrofit_generator: '>=3.0.0 <4.0.0'
+  retrofit_generator: ">=3.0.0 <4.0.0"
 
 flutter:
   uses-material-design: true
@@ -65,6 +66,7 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
     - assets/images/3.0x/
+    - assets/images/onboarding/
     - assets/images/auth/sign_in/
 
   fonts:
