--- a/.github/workflows/build_app.yaml
+++ b/.github/workflows/build_app.yaml
@@ -112,7 +112,7 @@ jobs:
         if: success() || failure() # run this step even if previous step failed
         with:
           name: Golden Tests result
-          path: packages/health_diary_watches_app/reports/tests.json
+          path: reports/tests.json
           reporter: dart-json
           token: ${{ secrets.GITHUB_TOKEN }}
 
