feat: user profile favorites & logout button

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/images/3.0x/
     - assets/images/auth/sign_in/
     - assets/images/profile/
+    - assets/images/place/
 
   fonts:
     - family: Montserrat
