--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   routemaster: ^0.9.0
   rxdart: ^0.27.0
   smooth_page_indicator: ^1.0.0+2
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   async: ^2.8.2
