--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
 
   flutter:
     sdk: flutter
+  flutter_facebook_auth: ^4.1.1
+  flutter_facebook_auth_web: ^3.0.0+1
   flutter_localizations:
     sdk: flutter
 
@@ -51,6 +53,7 @@ dev_dependencies:
   bloc_test: ^9.0.0
   build_runner: ^2.1.2
   dart_code_metrics: ^4.9.1
+
   flutter_lints: ^1.0.0
 
   flutter_test:
