--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 
 dependencies:
   bloc: ^8.0.0
+  cached_network_image: ^3.2.0
   dio: ^4.0.0
   equatable: ^2.0.0
   firebase_auth: ^3.3.6
