feat: main screen (#62)
* feat: registration_layout

* fix: safearea widget

* fix: main route

* fixes: register_screen

* fix: ios build and changelog

* fixes

* feat: registration_logic

* fix: buttonstate enum

* fix

* feat: viewmodel and route

* fix!: viewmodel

* fix: mobx

* fix: imports

* fix: golden test with viewmodel

* fix: test mocking

* fix: errors

* feat: main screen + places tab

* fix: after merge

* chore: update Changelog.md

* chore: update formatting

* fix: after merge

* fix: golden tests

* regenerate goldens

* fix: after review

* fix: after analyze error

* fix: after analyze error

* fix: after merge

* fix: after merge

* fix: after analyze error

* fix: after analyze error

* fix: ios build

* fix: ios build

Co-authored-by: Dmitry Dudunov <dydynovdima6@gmail.com>
Co-authored-by: Dmitry Krutskikh <dmitry.krutskikh@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 
 dependencies:
   bloc: ^8.0.0
+  cached_network_image: ^3.2.0
   dio: ^4.0.0
   equatable: ^2.0.0
   firebase_auth: ^3.3.6
@@ -44,7 +45,7 @@ dependencies:
   mobx: ^2.0.0
   provider: ^6.0.0
   retrofit: ^3.0.1
-  routemaster: ^0.9.0
+  routemaster: ^0.9.5
   rxdart: ^0.27.0
   smooth_page_indicator: ^1.0.0+2
 
@@ -77,6 +78,7 @@ flutter:
     - assets/images/3.0x/
     - assets/images/onboarding/
     - assets/images/auth/sign_in/
+    - assets/images/place/
 
   fonts:
     - family: Montserrat
