feat: profile screen (#63)
* feat: user profile layout

* feat: user profile header

* feat: user profile favorites & logout button

* fix: limit text width to prevent overflow

fix: limit text width to prevent overflow

* fix: changelog update

* fix: localization files

* fix: code review comments

* fix: encapsulate place tap function

* fix: viewmodel added

Co-authored-by: Andrey Rankov <andreyr@appcard.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - assets/images/3.0x/
     - assets/images/onboarding/
     - assets/images/auth/sign_in/
+    - assets/images/profile/
     - assets/images/place/
 
   fonts:
