--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   routemaster: ^0.9.5
   rxdart: ^0.27.0
   share_plus: ^4.0.3
+  shimmer: ^2.0.0
   smooth_page_indicator: ^1.0.0+2
 
 dev_dependencies:
